fix styling for titles in project cards, add spacing between announcements and trending

--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ ul {
     display: grid;
     grid-template-columns: 3fr 1fr;
     grid-template-rows: 1fr 1fr;
-    gap: 15px 15px;
+    gap: 10rem 15px;
 }
 
 .projectsContainer {
@@ -71,13 +71,14 @@ ul {
 
 }
 
-.card div:first-child {
+.projectsContainer .card div:first-child {
     font-weight: bold;
     font-size: 24px;
 }
 
 .annoucementContainer {
     height: 100%;
+    padding: 1em;
 }
 
 .annoucementContainer  p{
@@ -193,4 +194,5 @@ ul {
 .title {
     font-size: 24px;
     font-weight: bold;
+    padding-bottom: 5px;
 }
